# Babel

./: .gitignore  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: cache.yaml  lint-and-test.yaml
data/json/: icml2024_papers.json  papers.md
environments/: Dockerfile
environments/ci/: docker-compose.yaml
outputs/adjusted_frequency/title_and_abstract/: cvpr2020_papers_title_and_abstract_3gram_adjusted.csv  cvpr2021_papers_title_and_abstract_3gram_adjusted.csv  cvpr2022_papers_title_and_abstract_3gram_adjusted.csv  cvpr2023_papers_title_and_abstract_3gram_adjusted.csv  cvpr2024_papers_title_and_abstract_3gram_adjusted.csv  cvpr2025_papers_title_and_abstract_3gram_adjusted.csv  cvpr2026_papers_title_and_abstract_3gram_adjusted.csv  cvprw2019_papers_title_and_abstract_3gram_adjusted.csv  cvprw2020_papers_title_and_abstract_3gram_adjusted.csv  cvprw2021_papers_title_and_abstract_3gram_adjusted.csv  cvprw2022_papers_title_and_abstract_3gram_adjusted.csv  cvprw2023_papers_title_and_abstract_3gram_adjusted.csv  eccv2018_papers_title_and_abstract_3gram_adjusted.csv  eccv2020_papers_title_and_abstract_3gram_adjusted.csv  eccv2022_papers_title_and_abstract_3gram_adjusted.csv  eccv2024_papers_title_and_abstract_3gram_adjusted.csv  iccv2019_papers_title_and_abstract_3gram_adjusted.csv  iccv2021_papers_title_and_abstract_3gram_adjusted.csv  iccv2023_papers_title_and_abstract_3gram_adjusted.csv  iccv2025_papers_title_and_abstract_3gram_adjusted.csv  neurips2018_papers_title_and_abstract_3gram_adjusted.csv  neurips2019_papers_title_and_abstract_3gram_adjusted.csv  neurips2020_papers_title_and_abstract_3gram_adjusted.csv  neurips2021_papers_title_and_abstract_3gram_adjusted.csv  neurips2022_papers_title_and_abstract_3gram_adjusted.csv  neurips2023_papers_title_and_abstract_3gram_adjusted.csv  neurips2024_papers_title_and_abstract_3gram_adjusted.csv
outputs/adjusted_frequency/title_only/: cvpr2023_papers_title_only_3gram_adjusted.csv  cvpr2025_papers_title_only_3gram_adjusted.csv  cvpr2026_papers_title_only_3gram_adjusted.csv  eccv2020_papers_title_only_3gram_adjusted.csv  eccv2022_papers_title_only_3gram_adjusted.csv  iccv2025_papers_title_only_3gram_adjusted.csv  neurips2023_papers_title_only_3gram_adjusted.csv  neurips2024_papers_title_only_3gram_adjusted.csv
outputs/raw_frequency/title_and_abstract/: cvprw2019_papers_title_and_abstract_3gram.csv  cvprw2020_papers_title_and_abstract_3gram.csv  cvprw2021_papers_title_and_abstract_3gram.csv  cvprw2022_papers_title_and_abstract_3gram.csv  cvprw2023_papers_title_and_abstract_3gram.csv  eccv2018_papers_title_and_abstract_3gram.csv
outputs/raw_frequency/title_only/: cvpr2020_papers_title_only_3gram.csv  cvpr2021_papers_title_only_3gram.csv  cvpr2022_papers_title_only_3gram.csv  cvpr2023_papers_title_only_3gram.csv  cvpr2024_papers_title_only_3gram.csv  cvpr2025_papers_title_only_3gram.csv  cvpr2026_papers_title_only_3gram.csv  cvprw2020_papers_title_only_3gram.csv  cvprw2021_papers_title_only_3gram.csv  cvprw2022_papers_title_only_3gram.csv  eccv2018_papers_title_only_3gram.csv  eccv2020_papers_title_only_3gram.csv  eccv2022_papers_title_only_3gram.csv  eccv2024_papers_title_only_3gram.csv  iccv2019_papers_title_only_3gram.csv  iccv2021_papers_title_only_3gram.csv  iccv2023_papers_title_only_3gram.csv  iccv2025_papers_title_only_3gram.csv  neurips2018_papers_title_only_3gram.csv  neurips2019_papers_title_only_3gram.csv  neurips2020_papers_title_only_3gram.csv  neurips2021_papers_title_only_3gram.csv  neurips2022_papers_title_only_3gram.csv  neurips2023_papers_title_only_3gram.csv  neurips2024_papers_title_only_3gram.csv
src/: cvf.py  icml.py  icml_neurips.py
src/scripts/: analyze_word_frequency.py  get_author_aff_icml_neurips.py  run_all_adjust_frequency_analysis_result.py  run_all_analyze_word_frequency.py  run_all_generate_wordcloud.py  scrape_conference_page.py
tests/: conftest.py
tests/src/: test_arxiv.py  test_cvf.py  test_cvf_ws.py  test_cvpr.py  test_eccv.py  test_frequencies.py  test_icml.py  test_neurips.py  test_utils.py
